--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,8 @@
         <div class="row">
             <div class="jumbotron col-md-6 col-md-offset-3"><h1>Battleships</h1><p>At least better than the movie</p></div>
         </div>
-        <div ng-view>
+        <div class="row">
+            <div  class="col-md-6 col-md-offset-3" ng-view></div>
         </div>
     </div>
 
