replaced loading screen with modal directive

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,16 @@
         <div class="row">
             <div  class="col-md-6 col-md-offset-3" ng-view></div>
         </div>
+        <div class="modal fade" id="loadingScreen">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <p style="text-align: center">Waiting for second player</p>
+                        <p style="text-align: center"><img src="/images/ajax-loader.gif" /></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="bower_components/jquery/jquery.js"></script>
