--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
             <div class="jumbotron col-md-6 col-md-offset-3"><h1>Battleships</h1><p>At least better than the movie</p></div>
         </div>
         <div class="row">
-            <div  class="col-md-6 col-md-offset-3" ng-view></div>
+            <div  class="col-md-6 col-md-offset-3" ng-include="'/views/loginView.html'"></div>
         </div>
         <div class="modal fade" id="loadingScreen">
             <div class="modal-dialog">
@@ -64,7 +64,6 @@
         <script src="scripts/externalLibraries.js"></script>
         <script src="scripts/controllers/lobbyController.js"></script>
         <script src="scripts/controllers/gameController.js"></script>
-        <script src="scripts/controllers/loginController.js"></script>
         <!-- endbuild -->
 </body>
 </html>
