minor improvements to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -6,17 +6,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Battleships</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen">
-        <!-- build:css(.tmp) styles/main.css -->
-
-        <link rel="stylesheet" href="bower_components/toastr/toastr.css">
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
+    <link rel="stylesheet" href="bower_components/toastr/toastr.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
 </head>
   <body ng-app="battleships">
     <!--[if lt IE 7]>
