--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/toastr/toastr.js"></script>
+    <script src="bower_components/polymer/polymer.js.js"></script>
 
         <!-- build:js scripts/plugins.js -->
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
