Added data binding for fields and eventhandler.

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <script src="libs/jquery.signalR-2.0.0.js"></script>
     <script src="http://localhost:58886/signalr/hubs"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/toastr/toastr.js"></script>
 
