--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
 
     <!-- build:js scripts/plugins.js -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/lodash/dist/lodash.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
